@@ -39,6 +39,7 @@ Revision history for Rex
  - List optional features and their dependencies
  - List suggested development dependencies
  - Test cpuinfo inventory
+ - Add initial file hook tests
 
 1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
  [DOCUMENTATION]
